--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket-chat-example",
+  "name": "eon-forum-and-chat",
   "version": "0.0.1",
   "description": "My first chat app!",
   "dependencies": {
