--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
     "name": "eon-forum-and-chat",
-    "version": "0.0.1",
+    "version": "0.7.a",
     "description": "node, express, socket-io basic live forum for internal use",
     "repository": {
         "type": "git",
         "url": "https://github.com/EricBalingit/eon-forum-and-chat"
-    }
+    },
     "dependencies": {
         "express": "4.14.1",
-        "socket.io": "1.7.3"
+        "pug": "2.0.0-beta11",
+        "express-session": "1.15.1",
+        "mysql": "2.13.0",
+        "express-mysql-session": "1.2.0",
+        "socket.io": "1.7.3",
+        "prompt": "1.0.0",
+        "colors": "1.1.2",
+        "bcrypt": "1.0.2"
     }
 }
