--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eon-forum-and-chat",
-    "version": "0.8.0",
+    "version": "0.8.2"
     "description": "node, express, socket-io basic live forum for internal use",
     "repository": {
         "type": "git",
